# fastapi-todo-list

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0a226579de7f_.py  1ae7d3f508d7_.py  5eb6b8129acb_create_task_table.py  87b760e0d580_.py  94ef42531346_.py
api/: __init__.py  auth.py  tasks.py
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 1c7f6b7b8f95_.py  2f0a861c8afe_change_priotity_to_priority.py  49a42dbfdd79_add_email_field_to_user_table.py  5ecb7930101a_initial.py  69bc2b4d20bf_additional_columns_to_tables.py
app/api/v1/: dependencies.py  exceptions.py
app/api/v1/routes/: auth.py  auth_route.py  tasks.py  tasks_route.py
app/core/: config.py  db.py  exceptions.py  security.py
app/mixins/: __init__.py  timestamp.py
app/models/: __init__.py  base.py  mixins.py  task.py  user.py
app/repositories/: auth_repository.py  task_repository.py
app/schemas/: task.py  user.py
app/services/: dependencies.py  tasks_service.py  token_service.py  user_service.py
app/utils/: __init__.py  auth.py  due_date.py  jwt.py
core/: __init__.py  config.py  db.py
core/utils/: __init__.py  auth_utils.py  jwt_utils.py
mixins/: __init__.py  id_mixin.py
models/: __init__.py  task.py  user.py
schemas/: __init__.py  task_schemas.py  user_schemas.py
scripts/: start.sh
services/: due_date.py
views/: __init__.py  task_view.py
